# storage-scraper

./: Makefile  output.csv  pyproject.toml  setup.py
storage_scraper/: __init__.py  cli.py  config.py  exporter.py  models.py  ollama_client.py  scraper.py
storage_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
